# pyRevitFoundryMCP

./: .gitignore  .pyrevit-foundry.toml.example  CONTRIBUTING.md  LICENSE  README.md  masterprompt.json  pyproject.toml
.github/workflows/: tests.yml
foundry_core/: __init__.py  config.py
foundry_core/analyzers/: __init__.py  bundle_yaml_analyzer.py  duplicate_analyzer.py  extensions_json_analyzer.py  extract_to_lib.py  import_audit.py  ironpython_audit.py  lib_structure.py
foundry_core/engine/: __init__.py  extension_creator.py  patch_engine.py
foundry_core/indexers/: __init__.py  core_indexer.py  repo_indexer.py
foundry_core/templates/: bundle_pushbutton.yaml  bundle_stack.yaml  extension_config.yaml  extensions.json  help.html  script.py
foundry_mcp/: __init__.py  server.py
tests/: test_bundle_yaml.py  test_repo_indexer.py
tests/fixtures/sample_extension/MyExt.extension/Tab1.tab/Panel1.panel/Button1.pushbutton/: bundle.yaml  script.py
tests/fixtures/sample_extension/MyExt.extension/Tab1.tab/Panel1.panel/Button2.pushbutton/: script.py
