[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrevit-foundry-mcp"
version = "0.1.0"
description = "MCP server for developing and maintaining pyRevit extensions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-snapshot"]

[project.scripts]
pyrevit-foundry = "foundry_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["foundry_core", "foundry_mcp"]
